# lfs-final-project

./: README.md  type.als  type.rkt
crx/: background.js  contentScript.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  separator.js  styles.css  webpack.config.js
crx/src/: manifest.json  popup.html
crx/src/js/: contentScript.js  popup.js
crx/utils/: build.js
pyret-parse/: Cargo.toml
pyret-parse/src/: lib.rs  main.rs
sample-types/: binTree.als  binTreeAndList.als  binTreeMissingVal.als  binTreeNoMt.als  binTreePerson.als  binTreePersonMissingAge.als  binTreeRedundant.als  noComparisons.als
