[package]
name = "pyret-parse"
version = "0.1.1"
authors = ["mxheller <heller.max1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
peg = "^0.6"
wasm-bindgen = "^0.2"
